--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -574,7 +574,7 @@
           .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark .mark-stripe {
             width: 0;
             white-space: nowrap;
-            height: 15px;
+            height: 17px;
             position: absolute;
             display: block;
             -moz-animation-name: richcc-width-animation;
@@ -604,16 +604,16 @@
             .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark .mark-stripe.highlightBorder {
               border-color: #000000; }
               .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark .mark-stripe.highlightBorder .mark-stripe-color {
-                width: calc(100% - 2px);
-                height: calc(100% - 2px);
+                width: calc(100% - 4px);
+                height: calc(100% - 4px);
                 position: absolute;
-                top: 1px;
-                left: 1px; }
+                top: 2px;
+                left: 2px; }
             .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark .mark-stripe .mark-stripe-color {
               width: 100%;
-              height: calc(100% - 2px);
+              height: calc(100% - 4px);
               position: absolute;
-              top: 1px;
+              top: 2px;
               left: 0; }
 
 @-webkit-keyframes richcc-width-animation {
@@ -2947,7 +2947,7 @@
           .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark.top {
             top: 5px; }
           .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark.bottom {
-            top: 28px; }
+            top: 30px; }
           .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark.morePresent {
             bottom: 0;
             background: none;
@@ -3030,6 +3030,12 @@
             top: 5px;
             width: calc(100% - 50px);
             margin-left: 18px; }
+            .richcc-datepicker .richcc-daypicker.richcc-light tbody .richcc-row .richcc-td .markHolder .mark .mark-stripe .mark-stripe-color {
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              top: 0;
+              left: 0; }
             .richcc-datepicker .richcc-daypicker.richcc-light tbody .richcc-row .richcc-td .markHolder .mark .mark-stripe .text {
               display: none; }
       .richcc-datepicker .richcc-daypicker.richcc-light tbody .richcc-row .richcc-td.richcc-light-lastdaymark {
