--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -953,7 +953,7 @@
                                 .mark-stripe {
                                     width: 0;
                                     white-space: nowrap;
-                                    height: 15px;
+                                    height: 17px;
                                     position: absolute;
                                     display: block;
                                     -moz-animation-name: richcc-width-animation;
@@ -985,19 +985,19 @@
                                         border-color: #000000;
 
                                         .mark-stripe-color {
-                                            width: calc(100% - 2px);
-                                            height: calc(100% - 2px);
+                                            width: calc(100% - 4px);
+                                            height: calc(100% - 4px);
                                             position: absolute;
-                                            top: 1px;
-                                            left: 1px;
+                                            top: 2px;
+                                            left: 2px;
                                         }
                                     }
 
                                     .mark-stripe-color {
                                         width: 100%;
-                                        height: calc(100% - 2px);
+                                        height: calc(100% - 4px);
                                         position: absolute;
-                                        top: 1px;
+                                        top: 2px;
                                         left: 0;
                                     }
                                 }
@@ -1116,7 +1116,7 @@
                                 }
 
                                 &.bottom {
-                                    top: 28px;
+                                    top: 30px;
                                 }
 
                                 &.morePresent {
@@ -1241,6 +1241,14 @@
                                     top: 5px;
                                     width: calc(100% - 50px);
                                     margin-left: 18px;
+
+                                    .mark-stripe-color {
+                                        width: 100%;
+                                        height: 100%;
+                                        position: absolute;
+                                        top: 0;
+                                        left: 0;
+                                    }
 
                                     .text {
                                         display: none;
