--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -418,12 +418,26 @@
             display: block;
             margin: 0 auto;
             height: 100%;
-            background: #f6f6f6;
+            background-color: #f6f6f6;
             border-left: 1px solid #fff;
             border-right: 1px solid #fff;
             -moz-box-sizing: content-box;
             -webkit-box-sizing: content-box;
             box-sizing: content-box; }
+            .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content.showingDates .month-date {
+              position: absolute;
+              height: 100%;
+              font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+              font-weight: 400;
+              color: #A0A0A0;
+              font-size: x-small;
+              text-align: center;
+              top: -1px;
+              right: 3px; }
+            .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content.showingDates .markHolder .mark.top {
+              top: 9px; }
+            .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content.showingDates .markHolder .mark.bottom {
+              top: 18px; }
             .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content.notInPresentMonth {
               background: none;
               border: none;
@@ -448,8 +462,14 @@
                   height: 4px;
                   border-radius: 2px;
                   position: absolute;
-                  top: 5px;
-                  margin-left: 15px; }
+                  top: 3px;
+                  margin-left: 12px; }
+                  .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content .markHolder .mark .mark-stripe.light .mark-stripe-color {
+                    width: 100%;
+                    height: 4px;
+                    position: absolute;
+                    top: 0;
+                    left: 0; }
     .richcc-datepicker .richcc-daypicker.uib-monthpicker .eventMonthMarker,
     .richcc-datepicker .richcc-daypicker.uib-monthpicker .eventDayMarker {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
