--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -689,12 +689,39 @@
                                         display: block;
                                         margin: 0 auto;
                                         height: 100%;
-                                        background: #f6f6f6;
+                                        background-color: #f6f6f6;
                                         border-left: 1px solid #fff;
                                         border-right: 1px solid #fff;
                                         -moz-box-sizing: content-box;
                                         -webkit-box-sizing: content-box;
                                         box-sizing: content-box;
+
+                                        &.showingDates {
+                                            .month-date {
+                                                position: absolute;
+                                                height: 100%;
+                                                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                                                font-weight: 400;
+                                                color: #A0A0A0;
+                                                font-size: x-small;
+                                                text-align: center;
+                                                top: -1px;
+                                                right: 3px;
+                                            }
+
+                                            .markHolder {
+                                                .mark {
+
+                                                    &.top {
+                                                        top: 9px;
+                                                    }
+
+                                                    &.bottom {
+                                                        top: 18px;
+                                                    }
+                                                }
+                                            }
+                                        }
 
 
                                         &.notInPresentMonth {
@@ -731,8 +758,16 @@
                                                         height: 4px;
                                                         border-radius: 2px;
                                                         position: absolute;
-                                                        top: 5px;
-                                                        margin-left: 15px;
+                                                        top: 3px;
+                                                        margin-left: 12px;
+
+                                                        .mark-stripe-color {
+                                                            width: 100%;
+                                                            height: 4px;
+                                                            position: absolute;
+                                                            top: 0;
+                                                            left: 0;
+                                                        }
                                                     }
                                                 }
                                             }
