--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -592,31 +592,31 @@
           -webkit-transition: all 300ms linear 300ms, width 300ms linear;
           transition: all 300ms linear 300ms, width 300ms linear; }
           .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark .mark-stripe {
-            width: 100%;
+            width: 0;
             white-space: nowrap;
             height: 17px;
             position: absolute;
             display: block;
-            /*-moz-animation-name: richcc-width-animation;
-                                    -o-animation-name: richcc-width-animation;
-                                    -webkit-animation-name: richcc-width-animation;
-                                    animation-name: richcc-width-animation;
-                                    -moz-animation-duration: 400ms;
-                                    -o-animation-duration: 400ms;
-                                    -webkit-animation-duration: 400ms;
-                                    animation-duration: 400ms;
-                                    -moz-animation-iteration-count: 1;
-                                    -o-animation-iteration-count: 1;
-                                    -webkit-animation-iteration-count: 1;
-                                    animation-iteration-count: 1;
-                                    -moz-animation-timing-function: ease-out;
-                                    -o-animation-timing-function: ease-out;
-                                    -webkit-animation-timing-function: ease-out;
-                                    animation-timing-function: ease-out;
-                                    -moz-animation-fill-mode: forwards;
-                                    -o-animation-fill-mode: forwards;
-                                    -webkit-animation-fill-mode: forwards;
-                                    animation-fill-mode: forwards;*/
+            -moz-animation-name: richcc-width-animation;
+            -o-animation-name: richcc-width-animation;
+            -webkit-animation-name: richcc-width-animation;
+            animation-name: richcc-width-animation;
+            -moz-animation-duration: 400ms;
+            -o-animation-duration: 400ms;
+            -webkit-animation-duration: 400ms;
+            animation-duration: 400ms;
+            -moz-animation-iteration-count: 1;
+            -o-animation-iteration-count: 1;
+            -webkit-animation-iteration-count: 1;
+            animation-iteration-count: 1;
+            -moz-animation-timing-function: ease-out;
+            -o-animation-timing-function: ease-out;
+            -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+            -moz-animation-fill-mode: forwards;
+            -o-animation-fill-mode: forwards;
+            -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
             border: 2px dashed transparent;
             -moz-box-sizing: content-box;
             -webkit-box-sizing: content-box;
