--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -598,6 +598,23 @@
           -o-transition: all 300ms linear 300ms, width 300ms linear;
           -webkit-transition: all 300ms linear 300ms, width 300ms linear;
           transition: all 300ms linear 300ms, width 300ms linear; }
+          .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark.webWorkers {
+            transition: none;
+            will-change: auto;
+            -moz-transform: translateZ(0);
+            -ms-transform: translateZ(0);
+            -o-transform: translateZ(0);
+            -webkit-transform: translateZ(0);
+            transform: translateZ(0); }
+            .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark.webWorkers .mark-stripe {
+              animation: none;
+              width: 100%;
+              will-change: auto;
+              -moz-transform: translateZ(0);
+              -ms-transform: translateZ(0);
+              -o-transform: translateZ(0);
+              -webkit-transform: translateZ(0);
+              transform: translateZ(0); }
           .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark .mark-stripe {
             width: 0;
             white-space: nowrap;
