--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -994,6 +994,27 @@
                                 -webkit-transition: all 300ms linear 300ms, width 300ms linear;
                                 transition: all 300ms linear 300ms, width 300ms linear;
 
+                                &.webWorkers {
+                                    transition: none;
+                                    will-change: auto;
+                                    -moz-transform: translateZ(0);
+                                    -ms-transform: translateZ(0);
+                                    -o-transform: translateZ(0);
+                                    -webkit-transform: translateZ(0);
+                                    transform: translateZ(0);
+
+                                    .mark-stripe {
+                                        animation: none;
+                                        width: 100%;
+                                        will-change: auto;
+                                        -moz-transform: translateZ(0);
+                                        -ms-transform: translateZ(0);
+                                        -o-transform: translateZ(0);
+                                        -webkit-transform: translateZ(0);
+                                        transform: translateZ(0);
+                                    }
+                                }
+
                                 .mark-stripe {
                                     width: 0;
                                     white-space: nowrap;
